--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Facemood</title>
@@ -12,6 +11,8 @@
     Ini login facebook
     <fb:login-button autologoutlink="true" scope="public_profile,email" >
     </fb:login-button>
+    <button type="button" onclick="FBLogin()">Facebook Login</button>
+    <button type="button" onclick="FBLogout()">Facebook Logout</button>
 
   <script>
     var next = ''
@@ -48,13 +49,26 @@
 
     function FBLogin () {
       FB.login(function(response) {
-        console.log('fblogin response ',response)
+        console.log('login response ',response)
+        console.log('login')
         if (response.authResponse) {
           localStorage.setItem('fbaccesstoken', response.authResponse.accessToken)
         } else {
           console.log('User cancelled login or did not fully authorize.');
         }
       }, {scope: 'public_profile,email,publish_actions,user_posts'});
+    }
+
+    function FBLogout () {
+      FB.logout(response => {
+        if (response) {
+          console.log('logout response', response)
+          localStorage.removeItem('fbaccesstoken')
+          // window.location.reload()
+        } else {
+          console.log('something wrong')
+        }
+      })
     }
 
   </script>
