--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
             <input type="text" placeholder="username"/>
             <input type="password" placeholder="password"/>
             <input type="submit" value="Sign In"/>
-            <button type="submit" onclick="fbLogin()">Signin With Facebook</i></button>
+            <button type="button" onclick="FBLogin()">Signin With Facebook</i></button>
             <br>
             <a href="#" id="to-up" onclick="">Don't have an account?</a>
 
@@ -51,6 +51,6 @@
             });
           })
         </script> -->
-        <script src="js/loginFB.js"></script>
+        <script src="js/loginFb.js"></script>
     </body>
 </html>
