--- a/client/home.html
+++ b/client/home.html
@@ -8,6 +8,10 @@
     <title>Home</title>
     <!-- Bootstrap -->
     <link href="https://bootswatch.com/yeti/bootstrap.min.css" rel="stylesheet">
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
     <link rel="stylesheet"
  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
@@ -22,44 +26,46 @@
       <li class="active"><a href="#">Home</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login With Facebook</a></li>
+      <li><a href="login"><span class="glyphicon glyphicon-log-in" onclick="FBLogout"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
   </head>
   <body>
+    <div class="container">
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="rubberBand" >FaceMood</h1>
             <p class="flash">Expression Your Mood</p>
           </div>
         </div>
-      <form class="container">
-        <div class="form-check">
-          <label for="exampleInputPassword1">Url</label>
-            <input type="text" class="form-control"  placeholder="--Input Url--">
-          </label>
-        </div>
-        <br>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-      <nav aria-label="Page navigation example" class="container">
-      <ul class="pagination justify-content-center">
-        <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1">Previous</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-          <a class="page-link" href="#">Next</a>
-        </li>
-      </ul>
-    </nav>
+
+          </div>
+          </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="text/javascript">
+      axios.get('http://localhost:3000/get-feed')
+      .then(response => {
+        let data = response.data
+        data.forEach(user => {
+          user.quoteslist.forEach(post => {
+            $('#posts').append(`
+              <div class="card">
+                <img class="card-img-top" src="${post.url}" alt="Card image cap">
+                <div class="card-body">
+                  <h4 class="card-title">${post.quotes}</h4>
+                  <p class="card-text">${post.author}</p>
+                  <p class="card-text">${post.mood}<small class="text-muted"></small></p>
+                </div>
+              </div>
+            `)
+          })
+        })
+      })
+    </script>
   </body>
 </html>
