--- a/client/cam.html
+++ b/client/cam.html
@@ -43,7 +43,7 @@
         })
         .then(({data}) => {
           console.log(data[0]);
-          return axios.post('http://localhost:3000/api/get-result', data[0])
+          return axios.post('https://face-mood.herokuapp.com/api/get-result', data[0])
         })
         .then(({data}) => {
           console.log(data);
